feat: signal and whatsapp into casks

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -4,10 +4,12 @@ cask 'docker'
 cask 'firefox'
 cask 'iterm2'
 cask 'ngrok'
+cask 'signal'
 cask 'spotify'
 cask 'virtualbox'
 cask 'visual-studio-code'
 cask 'vlc'
+cask 'whatsapp'
 cask 'zoom'
 
 brew 'bat'
