feat: update Brewfile

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -8,10 +8,11 @@ cask 'signal'
 cask 'spotify'
 cask 'virtualbox'
 cask 'visual-studio-code'
-cask 'vlc'
+cask 'vlc'  
 cask 'whatsapp'
 cask 'zoom'
 
+brew 'awscli'
 brew 'bat'
 brew 'bitwarden-cli'
 brew 'cdktf'
@@ -38,6 +39,7 @@ brew 'rust'
 brew 'stow'
 brew 'tfenv'
 brew 'tflint'
+brew 'tlrc'
 brew 'tmux'
 brew 'tree'
 brew 'vault'
