--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -46,6 +46,7 @@ brew 'vault'
 brew 'warrensbox/tap/tfswitch'
 brew 'wget'
 brew 'xclip'
+brew 'zig'
 brew 'zplug'
 brew 'zsh-autosuggestions'
 brew 'zsh-history-substring-search'
