feat: dumped brewfile after fresh install

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,53 +1,105 @@
-cask 'balenaetcher'
-cask 'dbeaver-community'
-cask 'docker'
-cask 'firefox'
-cask 'iterm2'
-cask 'ngrok'
-cask 'signal'
-cask 'spotify'
-cask 'virtualbox'
-cask 'visual-studio-code'
-cask 'vlc'  
-cask 'whatsapp'
-cask 'zoom'
-
-brew 'awscli'
-brew 'bat'
-brew 'bitwarden-cli'
-brew 'cdktf'
-brew 'cmake'
-brew 'coreutils'
-brew 'fzf'
-brew 'git-delta'
-brew 'gnutls'
-brew 'goenv'
-brew 'htop'
-brew 'jless'
-brew 'jq'
-brew 'lazydocker'
-brew 'make'
-brew 'moreutils'
-brew 'n'
-brew 'neovim'
-brew 'openjdk'
-brew 'openvpn'
-brew 'perl'
-brew 'postgresql@14'
-brew 'pyenv'
-brew 'rust'
-brew 'stow'
-brew 'tfenv'
-brew 'tflint'
-brew 'tlrc'
-brew 'tmux'
-brew 'tree'
-brew 'vault'
-brew 'warrensbox/tap/tfswitch'
-brew 'wget'
-brew 'xclip'
-brew 'zig'
-brew 'zplug'
-brew 'zsh-autosuggestions'
-brew 'zsh-history-substring-search'
-brew 'zsh-syntax-highlighting'
+tap "homebrew/bundle"
+tap "warrensbox/tap"
+brew "awscli"
+brew "bat"
+brew "bitwarden-cli"
+brew "cmake"
+brew "coreutils"
+brew "fzf"
+brew "git-delta"
+brew "gnutls"
+brew "goenv"
+brew "htop"
+brew "jless"
+brew "jq"
+brew "lazydocker"
+brew "make"
+brew "moreutils"
+brew "n"
+brew "neovim"
+brew "openjdk"
+brew "openvpn"
+brew "perl"
+brew "postgresql@14"
+brew "pyenv"
+brew "ripgrep"
+brew "rust"
+brew "stow"
+brew "tfenv"
+brew "tflint"
+brew "tlrc"
+brew "tmux"
+brew "tree"
+brew "vault"
+brew "wget"
+brew "xclip"
+brew "zig"
+brew "zplug"
+brew "zsh-autosuggestions"
+brew "zsh-history-substring-search"
+brew "zsh-syntax-highlighting"
+cask "balenaetcher"
+cask "dbeaver-community"
+cask "docker"
+cask "firefox"
+cask "iterm2"
+cask "ngrok"
+cask "signal"
+cask "spotify"
+cask "virtualbox"
+cask "visual-studio-code"
+cask "vlc"
+cask "whatsapp"
+cask "zoom"
+vscode "aaron-bond.better-comments"
+vscode "christian-kohler.path-intellisense"
+vscode "dbaeumer.vscode-eslint"
+vscode "donjayamanne.githistory"
+vscode "dvirtz.parquet-viewer"
+vscode "eamodio.gitlens"
+vscode "esbenp.prettier-vscode"
+vscode "foxundermoon.shell-format"
+vscode "github.vscode-github-actions"
+vscode "golang.go"
+vscode "hashicorp.terraform"
+vscode "ionutvmi.path-autocomplete"
+vscode "janisdd.vscode-edit-csv"
+vscode "jdinhlife.gruvbox"
+vscode "kumar-harsh.graphql-for-vscode"
+vscode "mikestead.dotenv"
+vscode "mohsen1.prettify-json"
+vscode "mrmlnc.vscode-json5"
+vscode "ms-azuretools.vscode-docker"
+vscode "ms-ossdata.vscode-postgresql"
+vscode "ms-python.debugpy"
+vscode "ms-python.isort"
+vscode "ms-python.python"
+vscode "ms-python.vscode-pylance"
+vscode "ms-toolsai.jupyter"
+vscode "ms-toolsai.jupyter-keymap"
+vscode "ms-toolsai.jupyter-renderers"
+vscode "ms-toolsai.vscode-jupyter-cell-tags"
+vscode "ms-toolsai.vscode-jupyter-slideshow"
+vscode "ms-vscode-remote.remote-containers"
+vscode "ms-vscode.cmake-tools"
+vscode "ms-vscode.cpptools"
+vscode "ms-vscode.cpptools-extension-pack"
+vscode "ms-vscode.cpptools-themes"
+vscode "ms-vscode.hexeditor"
+vscode "ms-vscode.vscode-typescript-next"
+vscode "ms-vsliveshare.vsliveshare"
+vscode "pascalreitermann93.vscode-yaml-sort"
+vscode "randomfractalsinc.vscode-data-preview"
+vscode "rust-lang.rust-analyzer"
+vscode "rvest.vs-code-prettier-eslint"
+vscode "twxs.cmake"
+vscode "usernamehw.errorlens"
+vscode "visualstudioexptteam.intellicode-api-usage-examples"
+vscode "visualstudioexptteam.vscodeintellicode"
+vscode "vscode-icons-team.vscode-icons"
+vscode "vscodevim.vim"
+vscode "waderyan.gitblame"
+vscode "wayou.vscode-todo-highlight"
+vscode "yzhang.markdown-all-in-one"
+vscode "zhuangtongfa.material-theme"
+vscode "ziglang.vscode-zig"
