feat: update deps: fd, imagemagick

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -2,15 +2,21 @@ tap "homebrew/bundle"
 tap "warrensbox/tap"
 brew "awscli"
 brew "bat"
+brew "node", link: false
 brew "bitwarden-cli"
+brew "glib"
 brew "cmake"
 brew "coreutils"
+brew "fd"
 brew "fzf"
 brew "gh"
 brew "git-delta"
+brew "unbound"
 brew "gnutls"
 brew "goenv"
+brew "harfbuzz"
 brew "htop"
+brew "imagemagick"
 brew "jless"
 brew "jq"
 brew "lazydocker"
