--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -8,18 +8,20 @@ brew "glib"
 brew "cmake"
 brew "coreutils"
 brew "fd"
+brew "unbound"
+brew "gnutls"
+brew "harfbuzz"
+brew "ffmpeg"
 brew "fzf"
 brew "gh"
 brew "git-delta"
-brew "unbound"
-brew "gnutls"
 brew "goenv"
-brew "harfbuzz"
 brew "htop"
 brew "imagemagick"
 brew "jless"
 brew "jq"
 brew "lazydocker"
+brew "llvm"
 brew "make"
 brew "moreutils"
 brew "n"
@@ -27,6 +29,7 @@ brew "neovim"
 brew "openjdk"
 brew "openvpn"
 brew "perl"
+brew "pipx"
 brew "postgresql@14"
 brew "pyenv"
 brew "ripgrep"
@@ -41,6 +44,7 @@ brew "tree"
 brew "vault"
 brew "wget"
 brew "xclip"
+brew "youtube-dl"
 brew "zig"
 brew "zplug"
 brew "zsh-autosuggestions"
