feat: update deps

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -4,8 +4,10 @@ brew "awscli"
 brew "bat"
 brew "node", link: false
 brew "bitwarden-cli"
+brew "btop"
 brew "glib"
 brew "cmake"
+brew "cmake-docs"
 brew "coreutils"
 brew "fd"
 brew "unbound"
@@ -20,6 +22,7 @@ brew "htop"
 brew "imagemagick"
 brew "jless"
 brew "jq"
+brew "k6"
 brew "lazydocker"
 brew "llvm"
 brew "make"
@@ -79,6 +82,7 @@ vscode "ionutvmi.path-autocomplete"
 vscode "janisdd.vscode-edit-csv"
 vscode "jdinhlife.gruvbox"
 vscode "kumar-harsh.graphql-for-vscode"
+vscode "mathiasfrohlich.kotlin"
 vscode "mikestead.dotenv"
 vscode "mohsen1.prettify-json"
 vscode "mrmlnc.vscode-json5"
