--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -7,7 +7,7 @@
   pager  = delta 
 
 [push]
-	autoSetupRemote = always
+	autoSetupRemote = true
 
 [alias]
   co  = checkout
@@ -20,7 +20,7 @@
   c   = commit --verbose
   b   = b=!git for-each-ref --sort='-authordate' --format='%(authordate)%09%(objectname:short)%09%(refname)' refs/heads | sed -e 's-refs/heads/--'
   la  =!git config -l | grep alias | cut -c 7-
-  # TODO: to be fixed?
+  # TODO: fix? 
   month-commit = "!f() { commit_from_month; }; f"
 
 [interactive]
@@ -50,7 +50,7 @@
 [difftool "vscode"]
   cmd = code --wait --diff $LOCAL $REMOTE
 
-# TODO: change ff?
+# TODO: change? 
 [pull]
 	rebase = true
 	ff = only
