feat: update brew deps

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,23 +1,26 @@
 tap "homebrew/bundle"
 tap "warrensbox/tap"
+brew "coreutils"
+brew "asdf"
+brew "python@3.12"
 brew "awscli"
 brew "bat"
-brew "node", link: false
-brew "bitwarden-cli"
 brew "btop"
 brew "glib"
 brew "cmake"
 brew "cmake-docs"
-brew "coreutils"
+brew "curl"
 brew "fd"
 brew "unbound"
 brew "gnutls"
 brew "harfbuzz"
 brew "ffmpeg"
 brew "fzf"
+brew "gawk"
 brew "gh"
+brew "git"
 brew "git-delta"
-brew "goenv"
+brew "gnupg"
 brew "htop"
 brew "imagemagick"
 brew "jless"
@@ -27,17 +30,11 @@ brew "lazydocker"
 brew "llvm"
 brew "make"
 brew "moreutils"
-brew "n"
 brew "neovim"
-brew "openjdk"
 brew "openvpn"
 brew "perl"
 brew "pipx"
-brew "postgresql@14"
-brew "pyenv"
-brew "pyenv-virtualenv"
 brew "ripgrep"
-brew "rust"
 brew "stow"
 brew "terraform-docs"
 brew "tfenv"
@@ -45,11 +42,11 @@ brew "tflint"
 brew "tlrc"
 brew "tmux"
 brew "tree"
+brew "unzip"
 brew "vault"
 brew "wget"
 brew "xclip"
 brew "youtube-dl"
-brew "zig"
 brew "zplug"
 brew "zsh-autosuggestions"
 brew "zsh-history-substring-search"
