feat: update brew deps - k8s stuff

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,3 +1,4 @@
+tap "derailed/k9s"
 tap "homebrew/bundle"
 tap "warrensbox/tap"
 brew "coreutils"
@@ -21,11 +22,13 @@ brew "gh"
 brew "git"
 brew "git-delta"
 brew "gnupg"
+brew "helm"
 brew "htop"
 brew "imagemagick"
 brew "jless"
 brew "jq"
 brew "k6"
+brew "kubernetes-cli", link: false
 brew "lazydocker"
 brew "llvm"
 brew "make"
@@ -51,6 +54,7 @@ brew "zplug"
 brew "zsh-autosuggestions"
 brew "zsh-history-substring-search"
 brew "zsh-syntax-highlighting"
+brew "derailed/k9s/k9s"
 cask "balenaetcher"
 cask "dbeaver-community"
 cask "docker"
