--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -36,6 +36,8 @@
   la  =!git config -l | grep alias | cut -c 7-
   # TODO: fix? 
   month-commit = "!f() { commit_from_month; }; f"
+  pu  = push
+  pl  = pull
 
 [interactive]
   diffFilter = delta --color-only
