feat: replace asdf with mise-en-place

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,8 +1,6 @@
 tap "derailed/k9s"
 tap "homebrew/bundle"
 tap "warrensbox/tap"
-brew "coreutils"
-brew "asdf"
 brew "python@3.12"
 brew "awscli"
 brew "bat"
@@ -10,6 +8,7 @@ brew "btop"
 brew "glib"
 brew "cmake"
 brew "cmake-docs"
+brew "coreutils"
 brew "curl"
 brew "fd"
 brew "unbound"
@@ -32,15 +31,17 @@ brew "kubernetes-cli", link: false
 brew "lazydocker"
 brew "llvm"
 brew "make"
+brew "mise"
 brew "moreutils"
 brew "neovim"
 brew "openvpn"
 brew "perl"
 brew "pipx"
+brew "qemu"
 brew "ripgrep"
 brew "stow"
+brew "tailscale"
 brew "terraform-docs"
-brew "tfenv"
 brew "tflint"
 brew "tlrc"
 brew "tmux"
@@ -66,16 +67,19 @@ cask "spotify"
 cask "virtualbox"
 cask "visual-studio-code"
 cask "vlc"
+cask "vnc-viewer"
 cask "whatsapp"
 cask "zoom"
 vscode "aaron-bond.better-comments"
 vscode "christian-kohler.path-intellisense"
 vscode "dbaeumer.vscode-eslint"
+vscode "docker.docker"
 vscode "donjayamanne.githistory"
 vscode "dvirtz.parquet-viewer"
 vscode "eamodio.gitlens"
 vscode "esbenp.prettier-vscode"
 vscode "foxundermoon.shell-format"
+vscode "fwcd.kotlin"
 vscode "github.vscode-github-actions"
 vscode "golang.go"
 vscode "hashicorp.terraform"
