feat: update brewfile

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,7 +1,7 @@
 tap "derailed/k9s"
 tap "homebrew/bundle"
 tap "warrensbox/tap"
-brew "python@3.12"
+brew "arp-scan"
 brew "awscli"
 brew "bat"
 brew "btop"
@@ -14,6 +14,7 @@ brew "fd"
 brew "unbound"
 brew "gnutls"
 brew "harfbuzz"
+brew "python@3.12"
 brew "ffmpeg"
 brew "fzf"
 brew "gawk"
@@ -34,6 +35,7 @@ brew "make"
 brew "mise"
 brew "moreutils"
 brew "neovim"
+brew "nmap"
 brew "openvpn"
 brew "perl"
 brew "pipx"
@@ -61,6 +63,7 @@ cask "dbeaver-community"
 cask "docker"
 cask "firefox"
 cask "iterm2"
+cask "mitmproxy"
 cask "ngrok"
 cask "signal"
 cask "spotify"
@@ -91,6 +94,7 @@ vscode "mathiasfrohlich.kotlin"
 vscode "mikestead.dotenv"
 vscode "mohsen1.prettify-json"
 vscode "mrmlnc.vscode-json5"
+vscode "ms-azuretools.vscode-containers"
 vscode "ms-azuretools.vscode-docker"
 vscode "ms-ossdata.vscode-postgresql"
 vscode "ms-python.debugpy"
