feat: add devtui to brewfile

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,5 +1,6 @@
 tap "derailed/k9s"
 tap "homebrew/bundle"
+tap "skatkov/tap"
 tap "warrensbox/tap"
 brew "arp-scan"
 brew "awscli"
@@ -58,6 +59,7 @@ brew "zsh-autosuggestions"
 brew "zsh-history-substring-search"
 brew "zsh-syntax-highlighting"
 brew "derailed/k9s/k9s"
+brew "skatkov/tap/devtui"
 cask "balenaetcher"
 cask "dbeaver-community"
 cask "docker"
