--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,13 +1,13 @@
 [user]
-	name  = ninsy
-	email = kwojciechowski094@gmail.com
+  name  = ninsy
+  email = kwojciechowski094@gmail.com
 
 [core]
-	editor = nvim
+  editor = nvim
   pager  = delta 
 
 [push]
-	autoSetupRemote = true
+  autoSetupRemote = true
 
 [alias]
   aliases = !git config --get-regexp '^alias\\.'
@@ -36,15 +36,15 @@
   la  =!git config -l | grep alias | cut -c 7-
   # TODO: fix? 
   month-commit = "!f() { commit_from_month; }; f"
-  pu  = push
-  pl  = pull
+
+# git rev-parse --abbrev-ref HEAD
 
 [interactive]
   diffFilter = delta --color-only
 
 [delta]
   navigate     = true
-  light        = false
+  dark         = true
   side-by-side = true
   line-numbers = true
 
@@ -53,14 +53,15 @@
 
 # TODO: migrate to nvim too...
 [merge]
-  tool = vscode
-  conflictstyle = diff3  
+  tool 		= vscode
+  conflictstyle = zdiff3  
 
 [mergetool "vscode"]
   cmd = code --wait $MERGED
 
+# TODO: migrate?
 [diff]
-  tool = vscode
+  tool       = vscode
   colorMoved = default
 
 [difftool "vscode"]
@@ -68,5 +69,5 @@
 
 # TODO: change? 
 [pull]
-	rebase = true
-	ff = only
+  rebase = true
+  ff = only
