feat: update tmux conf, cleanup of zshrc, separate file for aliases

--- a/tmux-latest-osx.conf
+++ b/tmux-latest-osx.conf
@@ -1,3 +1,5 @@
+# https://evgeniipendragon.com/posts/customizing-tmux-and-making-it-less-dreadful/
+
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
@@ -6,10 +8,15 @@ bind r source-file ~/.tmux.conf
 
 set -g base-index 1
 
+# TODO: replace with llm prompt?
 bind-key -r i run-shell "tmux neww tmux-cht.sh"
 bind \` switch-client -t'{marked}'
 
-# TODO: fix!
+set -g history-limit 9999999
+set -g mouse on
+set -g renumber-windows on
+
+# TODO: repalce with https://taskwarrior.org/docs/start/
 bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/dotfiles/todo.md"
 
 set -g @plugin 'tmux-plugins/tpm'
@@ -23,8 +30,19 @@ set -g @plugin 'thewtex/tmux-mem-cpu-load'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
-set -g status-right '#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]'
+# TODO: fix those
+# statusbar
+# set -g status-position top
+# set -g status-justify left
+# set -g status-style 'fg=green'
 
+# set -g status-left ''
+# set -g status-left-length 10
+
+# set -g status-right '#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]'
+# set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
+
+# To enter copy mode: press your tmux prefix (Ctrl+A), then [
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
