feat: update deps

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -54,6 +54,7 @@ brew "vault"
 brew "wget"
 brew "xclip"
 brew "youtube-dl"
+brew "yq"
 brew "zplug"
 brew "zsh-autosuggestions"
 brew "zsh-history-substring-search"
@@ -62,7 +63,7 @@ brew "derailed/k9s/k9s"
 brew "skatkov/tap/devtui"
 cask "balenaetcher"
 cask "dbeaver-community"
-cask "docker"
+cask "docker-desktop"
 cask "firefox"
 cask "iterm2"
 cask "mitmproxy"
@@ -103,6 +104,7 @@ vscode "ms-python.debugpy"
 vscode "ms-python.isort"
 vscode "ms-python.python"
 vscode "ms-python.vscode-pylance"
+vscode "ms-python.vscode-python-envs"
 vscode "ms-toolsai.jupyter"
 vscode "ms-toolsai.jupyter-keymap"
 vscode "ms-toolsai.jupyter-renderers"
@@ -124,6 +126,7 @@ vscode "twxs.cmake"
 vscode "usernamehw.errorlens"
 vscode "visualstudioexptteam.intellicode-api-usage-examples"
 vscode "visualstudioexptteam.vscodeintellicode"
+vscode "vscjava.vscode-gradle"
 vscode "vscode-icons-team.vscode-icons"
 vscode "vscodevim.vim"
 vscode "waderyan.gitblame"
