feat: update brew, copy/pasta scripts, ripgrep config

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -11,11 +11,11 @@ brew "cmake"
 brew "cmake-docs"
 brew "coreutils"
 brew "curl"
+brew "dateutils"
 brew "fd"
 brew "unbound"
 brew "gnutls"
 brew "harfbuzz"
-brew "python@3.12"
 brew "ffmpeg"
 brew "fzf"
 brew "gawk"
@@ -25,6 +25,7 @@ brew "git-delta"
 brew "gnupg"
 brew "helm"
 brew "htop"
+brew "python@3.12"
 brew "imagemagick"
 brew "jless"
 brew "jq"
@@ -41,6 +42,7 @@ brew "openvpn"
 brew "perl"
 brew "pipx"
 brew "qemu"
+brew "rclone"
 brew "ripgrep"
 brew "stow"
 brew "tailscale"
@@ -55,6 +57,7 @@ brew "wget"
 brew "xclip"
 brew "youtube-dl"
 brew "yq"
+brew "zizmor"
 brew "zplug"
 brew "zsh-autosuggestions"
 brew "zsh-history-substring-search"
@@ -122,6 +125,7 @@ vscode "pascalreitermann93.vscode-yaml-sort"
 vscode "randomfractalsinc.vscode-data-preview"
 vscode "rust-lang.rust-analyzer"
 vscode "rvest.vs-code-prettier-eslint"
+vscode "tamasfe.even-better-toml"
 vscode "twxs.cmake"
 vscode "usernamehw.errorlens"
 vscode "visualstudioexptteam.intellicode-api-usage-examples"
@@ -134,3 +138,8 @@ vscode "wayou.vscode-todo-highlight"
 vscode "yzhang.markdown-all-in-one"
 vscode "zhuangtongfa.material-theme"
 vscode "ziglang.vscode-zig"
+go "github.com/onsi/ginkgo/v2/ginkgo"
+go "cmd/go"
+go "cmd/gofmt"
+go "golang.org/x/tools/gopls"
+go "honnef.co/go/tools/cmd/staticcheck"
